# TradeBotLab

./: .gitignore  README.md  evaluate.py  generate_dataset.py  pyproject.toml  rnn_test.py  script.py  train.py
config/: config.py
src/: bot.py  dataset.py  trader.py  utils.py  visualization.py
src/bots/: base_bot.py  profit_bot.py  random_bot.py  rl_bot.py  rnn_bot.py
src/models/: environment.py  rl_agent.py  rnn.py
src/simulation/: simulator.py
src/training/: rl_trainer.py  rnn_trainer.py
